@@ -10,6 +10,7 @@ Mantis ChangeLog
 - 0004150: [filters] Custom field names are not localised in filters (vboctor)
 - 0004122: [relationships] Upgrade script seems to swap the duplicate relationship (masc)
 - 0004083: [sponsorships] Users without email address must not be able to sponsor issues (thraxisp)
+- 0004154: [bugtracker] "Product version" and "Fixed in Version" do not get updated on rename (vboctor)
 - 0004160: [bugtracker] Javascript error in the issue view pages (vboctor)
 - Updated Brazilian Portuguese language.
 
